--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <hr />
     <h3>Contact</h3>
     <ul><li>Phone:9949310774</li>
-    <li>Email:<a href="">gouthamsepuri9960@gmail.com</a></li></ul>
+    <li>Email:<a href="mailto:gouthamsepuri9960@gmail.com">gouthamsepuri9960@gmail.com</a></li></ul>
     <hr />
     <h3>Hobbies</h3>
     <ul>
